--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,8 @@ body {
   background-color: #171c28;  
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: white;  
+    font-family: "Karla", sans-serif;
+     color: white;  
 }
 
 a {
